# clusterizacao_escolas

./: README.md  main.py  pyproject.toml
docs/: regras_negocio_clusters.md
notebooks/: exploracao_variaveis.ipynb
src/: classificacao.py
src/clusters/: compartilha.py  farias_brito.py  kepler.py  uno.py
